--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 
 .example-header-image {
-  background-image: url('../../../assets/icons/dashboard.svg');
+  background-image: url('../../../assets/icons/baseline-dashboard-24px.svg');
   background-size: cover;
 }
 .card-status {
