--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -2,6 +2,7 @@
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>ລາຍການ Order ທັງໝົດ</mat-card-title>
+    <mat-card-subtitle>All current orders</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <div>
