--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -1,7 +1,8 @@
 <mat-card>
   <mat-card-header>
-    <mat-icon class="icon-header">settings</mat-icon>
-    <h1 mat-dialog-title>Settings</h1>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Settings</mat-card-title>
+    <mat-card-subtitle>Summary all Status</mat-card-subtitle>
     <p>
 
     </p>
