--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -61,7 +61,10 @@
                   <mat-list-item *ngFor="let cart of virtualCart">
                     <div class="row" style="width: 100%;">
                       <div class="col col-sm-12 col-md-3 text-left text-nowrap">{{ cart.food }} {{ cart.subFood }}</div>
-                      <div class="col col-sm-12 col-md-2 text-right">{{ cart.quantity | number }}</div>
+                      <div class="col col-sm-12 col-md-2 text-right" style="cursor: pointer;"
+                        (click)="openQuantity(cart)">
+                        {{ cart.quantity | number }}
+                      </div>
                       <div class="col col-sm-12 col-md-2 text-right">{{ cart.price | number }}</div>
                       <div class="col col-sm-12 col-md-2 text-right"> {{ cart.total | number }}</div>
                       <div class="col col-sm-12 col-md-2 text-left">{{ cart.note }}</div>
