--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar color="primary">
     <mat-toolbar-row>
       <span *ngFor="let RestaurantInfo of RestaurantInfos | async">{{ RestaurantInfo.restaurantName }}
-        {{ RestaurantInfo.slogan }} </span>
+      </span>
       <span class="example-spacer"></span>
       <div fxShow="true" fxHide.lt-md="true">
         <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of menusByRoles"
