--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -8,7 +8,19 @@
         <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of menusByRoles"
           routerLink="{{ menu.menuLink }}">{{
       menu.menuName }}</button>
-        <button mat-flat-button color="primary" class="matbtn" (click)="logOut()">logout</button>
+        <mat-menu #appMenu>
+          <button mat-menu-item>
+            <mat-icon>account_box</mat-icon>
+            <span>Profile</span>
+          </button>
+          <button mat-menu-item (click)="logOut()">
+            <mat-icon>exit_to_app</mat-icon>
+            <span>Logout</span>
+          </button>
+        </mat-menu>
+        <button mat-icon-button [matMenuTriggerFor]="appMenu">
+          <mat-icon>more_vert</mat-icon>
+        </button>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
