--- a/src/app/pages/kitchen-orders/kitchen-orders.component.html
+++ b/src/app/pages/kitchen-orders/kitchen-orders.component.html
@@ -3,41 +3,54 @@
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>Kitchen Order</mat-card-title>
     <mat-card-subtitle>Currnent Orders</mat-card-subtitle>
-
   </mat-card-header>
   <mat-card-content>
     <mat-divider></mat-divider>
     <div class="row">
-      <div class="col col-md-4 col-sm-12" *ngFor="let order of orders | async">
+      <div class="col col-md-6 col-sm-12" *ngFor="let order of orders | async">
         <div class="card mt-2">
           <div class="card-header text-center h4">
             ລາຍການອາຫານ ເວລາ {{ order.orderDateTime.toDate() | date: 'HH:mm:ss' }}
           </div>
           <div class="card-body">
             <div class="row">
-
-              <div class="col col-md-12">
+              <div class="col col-md-12" style="padding: 0;">
                 <table class="table table-bordered">
                   <thead class="thead-light">
-                    <th class="text-left h5">ບັດຄິວ</th>
-                    <th class="text-left h5">ອາຫານ</th>
-                    <th class="text-center h5">ຈຳນວນ</th>
-                    <th class="text-left h5">Note</th>
-                    <th class="text-center h5">Status</th>
+                    <th class="text-center h6">ບັດຄິວ</th>
+                    <th class="text-left h6">ອາຫານ</th>
+                    <th class="text-center h6">ຈຳນວນ</th>
+                    <th class="text-left h6">Note</th>
+                    <th class="text-center h6">Done</th>
                   </thead>
                   <tbody>
-                    <td class="align-middle text-center display-4" [attr.rowspan]="order.food.length +1">
+                    <td class="align-middle text-center display-4" [attr.rowspan]="order.food.length +1"
+                      style="width: 10px;">
                       {{ order.ticket }}</td>
                     <tr *ngFor="let food of order.food">
-                      <td class="text-left h5 text-nowrap">{{ food.food }}</td>
-                      <td class="text-center h4">{{ food.quantity |number }}</td>
-                      <td class="text-left h5 text-nowrap" style="color: red">{{ food.note }}</td>
-                      <td class="text-center " *ngIf="food.done == true; else undone">
-                        <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png" disable
-                          style="max-width: 20px;cursor: pointer;">
-                      </td>
-                      <ng-template #undone>
-                        <td></td>
+                      <ng-container *ngIf="food.kitchen === kitchen;">
+                        <td class="text-left text-nowrap">{{ food.food }}</td>
+                        <td class="text-center ">{{ food.quantity |number }}</td>
+                        <td class="text-left  text-nowrap" style="color: red; width: 100px;">{{ food.note }}</td>
+                        <td class="text-center" *ngIf="food.done == true; else undone" style="width: 10px;">
+                          <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png" disable
+                            style="max-width: 20px;cursor: pointer;">
+                        </td>
+                        <ng-template #undone>
+                          <td></td>
+                        </ng-template>
+                      </ng-container>
+                      <ng-template #all>
+                        <td class="text-left text-nowrap">{{ food.food }}</td>
+                        <td class="text-center ">{{ food.quantity |number }}</td>
+                        <td class="text-left  text-nowrap" style="color: red; width: 100px;">{{ food.note }}</td>
+                        <td class="text-center" *ngIf="food.done == true; else undone" style="width: 10px;">
+                          <img mat-raised-button src="../../../assets/icons/Check_green_icon.svg.png" disable
+                            style="max-width: 20px;cursor: pointer;">
+                        </td>
+                        <ng-template #undone>
+                          <td></td>
+                        </ng-template>
                       </ng-template>
                     </tr>
                   </tbody>
