--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -13,6 +13,10 @@
             <mat-icon>account_box</mat-icon>
             <span>Profile</span>
           </button>
+          <button mat-menu-item (click)="openNewPassword()">
+            <mat-icon>fingerprint</mat-icon>
+            <span>Change password</span>
+          </button>
           <button mat-menu-item (click)="logOut()">
             <mat-icon>exit_to_app</mat-icon>
             <span>Logout</span>
