--- a/src/app/pages/dbconsole/dbconsole.component.html
+++ b/src/app/pages/dbconsole/dbconsole.component.html
@@ -1,4 +1,4 @@
 <p>
   dbconsole
 </p>
-<button mat-raised-button color="warn">Ok</button>
+<button mat-raised-button color="warn" (click)="updateTransactionsLogfix()">Ok</button>
