--- a/src/app/pages/stocks/stocks.component.html
+++ b/src/app/pages/stocks/stocks.component.html
@@ -22,6 +22,7 @@
             <th scope="col" class="text-center">currentQuantity</th>
             <th scope="col" class="text-center">updateSource</th>
             <th scope="col" class="text-center">orderId</th>
+            <th scope="col" class="text-center">Username</th>
           </tr>
         </thead>
         <tbody>
@@ -34,7 +35,7 @@
             <td class="text-right">{{ stock.currentQuantity | number }}</td>
             <td class="text-center">{{ stock.updateSource  }}</td>
             <td class="text-center">{{ stock.orderId  }}</td>
-
+            <td class="text-center">{{ stock.username  }}</td>
           </tr>
         </tbody>
       </table>
