update user form

--- a/src/app/dialogs/user-register/user-register.component.html
+++ b/src/app/dialogs/user-register/user-register.component.html
@@ -71,7 +71,14 @@
             <option value="{{ role.roleCode }}" *ngFor="let role of roles | async">{{ role.roleCode }}</option>
           </select>
         </div>
-
+        <div class="form-group col-md-6" [ngClass]="showRole">
+          <label for="kitchen">Kitchen</label>
+          <select class="form-control" id="kitchen" formControlName="kitchen">
+            <option value="" disabled>------</option>
+            <option value="{{ kitchen.kitchenName }}" *ngFor="let kitchen of kitchens | async">{{ kitchen.kitchenName }}
+            </option>
+          </select>
+        </div>
       </div>
     </div>
   </div>
