--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Dashboard</mat-card-title>
+    <mat-card-title>Dashboard <span style="font-size: bold; position: absolute; right: 15px; ">Welcome:
+        {{ username }}</span>
+    </mat-card-title>
     <mat-card-subtitle>Summary all Status</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
