--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -42,8 +42,8 @@
         <div class="textTitle h5">Unit</div>
       </div>
       <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
-        <img src="../../../assets/icons/app.svg" class="gridImg">
-        <div class="textTitle h5">Menus</div>
+        <img src="../../../assets/icons/app.svg" class="gridImg" (click)="openStaffBenefit()">
+        <div class="textTitle h5">Staff Benefits</div>
       </div>
     </div>
   </mat-card-content>
