--- a/src/app/dialogs/open-cash/open-cash.component.html
+++ b/src/app/dialogs/open-cash/open-cash.component.html
@@ -4,15 +4,16 @@
 <form [formGroup]="addCashload">
   <div class="input-group mb-3">
     <input type="number" class="form-control" min="100000" placeholder="Open Cash minimum 100,000 KIP" min
-      aria-label="Open Cash minimum 100,000 KIP" aria-describedby="basic-addon2" require>
+      aria-label="Open Cash minimum 100,000 KIP" aria-describedby="basic-addon2" required formControlName="initBalance">
   </div>
   <div class="input-group mb-3">
-    <select class="form-control" formControlName="closeAuthorizedBy">
+    <select class="form-control" formControlName="openAuthorizedBy">
       <option value="" disabled>-----------------------</option>
-      <option value="{{ user.userName }}" *ngFor="let user of users | async">{{ user.fullName }}</option>
+      <option value="{{ user.email }}" *ngFor="let user of users | async">{{ user.fullName }}</option>
     </select>
     <div class="input-group-append">
-      <button class="btn btn-outline-success" (click)="approveProcess()" type="button">Approve</button>
+      <button class="btn btn-outline-success" [disabled]="btnDisable" (click)="approveProcess()"
+        type="button">Approve</button>
     </div>
   </div>
 </form>
