--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -60,7 +60,7 @@
                     {{ p.paymentMethod }}</div><span>{{ p.paymentAmount | number }}</span>
                 </h4>
                 <p *ngIf="p.paymentAmount > 0" class="m-b-0 h5">ຍອດການຂາຍ<span
-                    class="f-right h5">{{ p.paymentCount | number}}</span></p>
+                    class="f-right h5">{{ p.paymentCount | number}} ລາຍການ</span></p>
               </div>
             </div>
           </div>
