--- a/src/app/pages/cashload/cashload.component.html
+++ b/src/app/pages/cashload/cashload.component.html
@@ -30,13 +30,14 @@
                   <th scope="col" class="text-center">ລວມຍອດເງິນສົດ</th>
                   <th scope="col" class="text-center">ເງິນສົດຕົວຈິງ</th>
                   <th scope="col" class="text-center">Balance</th>
+                  <th scope="col" class="text-center">ຍອດຂາຍທັງໝົດ</th>
                   <th scope="col" class="text-center">ພະນັກງານຂາຍ</th>
                   <th scope="col" class="text-center">ເວລາປີດ</th>
                   <th scope="col" class="text-center">ອະນຸມັດໂດຍ</th>
                   <th scope="col" class="text-center">ສະຖານະ</th>
+                  <th scope="col" class="text-center">ໝາຍເຫດ</th>
                   <th scope="col" class="text-center">ປິດການຂາຍ</th>
                   <th scope="col" class="text-center">ຈັດການ</th>
-
                 </tr>
               </thead>
               <tbody>
@@ -51,8 +52,8 @@
                   <td class="text-right align-middle">{{ cash.cashBalance | number }}</td>
                   <td class="text-right align-middle">{{ cash.cashInHands | number }}</td>
                   <td class="text-right align-middle">{{ cash.closeBalance | number }}</td>
+                  <td class="text-right align-middle">{{ cash.totalSellAmount | number }}</td>
                   <td class="text-center align-middle">{{ cash.closeby }}</td>
-
                   <td class="text-center align-middle" *ngIf="cash.closeDatetime; else nonclose">
                     {{ cash.closeDatetime.toDate() | date: 'dd-MMM-yyyy H:mm:ss' }}</td>
                   <ng-template #nonclose>
@@ -63,11 +64,13 @@
                   <ng-template #closeStat>
                     <td class="text-center align-middle">Open</td>
                   </ng-template>
+                  <td class="text-left align-middle">{{ cash.note }}</td>
                   <td class="text-center align-middle"><button mat-flat-button color="warn" style="width: 100%;"
-                      (click)="openCloseBalance(cash)">ປິດ</button></td>
-                  <td class="text-center align-middle"><img mat-raised-button
-                      src="../../../assets/icons/baseline-delete-24px.svg" (click)="removeCashLoad(cash.id)"
-                      style="width: 20px;cursor: pointer;"></td>
+                      (click)="openCloseBalance(cash)">ປິດ</button>
+                  </td>
+                  <td class="text-center align-middle">
+                    <img mat-raised-button src="../../../assets/icons/baseline-delete-24px.svg"
+                      (click)="removeCashLoad(cash.id)" style="width: 20px;cursor: pointer;"></td>
                 </tr>
               </tbody>
             </table>
