update printer and reports

--- a/src/app/dialogs/payment-cash/payment-cash.component.html
+++ b/src/app/dialogs/payment-cash/payment-cash.component.html
@@ -67,6 +67,10 @@
                   <button mat-flat-button color="warn" style="width: 100%; height: 50px;" (click)="paymentProcess()"
                     [disabled]="paymentBtnDisabled">ຈ່າຍ</button>
                 </div>
+                <div class="form-group col-md-12" style="margin-top: 10px;">
+                  <button mat-flat-button color="warn" style="width: 100%; height: 50px;"
+                    (click)="prepaireItemToPrint()" [disabled]="paymentBtnDisabled">Test</button>
+                </div>
               </div>
             </mat-card-content>
           </mat-card>
