update kitchen order mon

--- a/src/app/pages/bom/bom.component.html
+++ b/src/app/pages/bom/bom.component.html
@@ -61,7 +61,8 @@
                     (click)="openUpdateBOM(bom)">Update</button>
                 </div>
                 <div class="col col-md-6">
-                  <button mat-raised-button color="warn" style="width: 100px;">Remove</button>
+                  <button mat-raised-button color="warn" style="width: 100px;"
+                    (click)="removeBom(bom.id)">Remove</button>
                 </div>
               </div>
             </td>
